--- a/src/main/resources/static/board/board.html
+++ b/src/main/resources/static/board/board.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/board.css">
+    <link rel="stylesheet" href="../css/demoweb.css">
 </head>
 <body>
 <h1>board</h1>
