--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>main page</title>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="js/control.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/demoweb.css">
+
+    <script>
+        $(document).ready(function() {
+            control.init();
+        })
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -15,10 +24,10 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#board">Board</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
@@ -33,8 +42,32 @@
         </form>
     </div>
 </nav>
-<body>
-
-</body>
+<!--<div class="container" style="width: 100%">-->
+<div class="custom-container">
+    <div class="jumbotron">
+        <h1 class="display-3">Hello, world!</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>
+            It uses utility classes for typography and spacing to space content out within the larger container.<br>
+            It uses utility classes for typography and spacing to space content out within the larger container.<br>
+            It uses utility classes for typography and spacing to space content out within the larger container.<br>
+            It uses utility classes for typography and spacing to space content out within the larger container.<br>
+            It uses utility classes for typography and spacing to space content out within the larger container.<br>
+            It uses utility classes for typography and spacing to space content out within the larger container.<br>
+            It uses utility classes for typography and spacing to space content out within the larger container.<br>
+            It uses utility classes for typography and spacing to space content out within the larger container.
+        </p>
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </p>
+    </div>
+</div>
+<footer class="custom-footer">
+    <blockquote class="blockquote text-center">
+        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+    </blockquote>
+</footer>
 </body>
 </html>
