--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#board">Board</a>
+                <a class="nav-link" href="#board" onclick="control.nav.loadHtml('board')">Board</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
@@ -63,7 +63,9 @@
         </p>
     </div>
 </div>
+
 <footer class="custom-footer">
+    <hr class="my-4">
     <blockquote class="blockquote text-center">
         <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
         <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
